# dbc-indexer

./: .gitignore  README.md  docker-compose.yml  main.py  requirements.txt
common/: __init__.py  tx_parser.py
db/: README.md
db/init/: 01_extensions.sql  02_schema.sql  03_hypertables_and_indexes.sql  04_compression_and_policies.sql  05_caggs.sql
db/migrate/: ensure_caggs.sql  ensure_compression_and_policies.sql
db/scripts/: migrate.sh
grpc_index/: main.py  requirements.txt
ingestion/: __init__.py  db.py
retroactive-indexer/: main.py  requirements.txt
ws_distro/: CMakeLists.txt  README.md
ws_distro/src/: main.cpp
